--- a/src/App.css
+++ b/src/App.css
@@ -2,23 +2,50 @@
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   grid-template-rows: repeat(6, 1fr);
-  grid-column-gap: 0px;
-  grid-row-gap: 0px;
+  grid-column-gap: 0.1rem;
+  grid-row-gap: 0.1rem;
   color: white;
-  width: 350px;
-  height: 400px;
+  width: 40rem;
+  height: 45rem;
   background-color: #333;
   position: absolute;
   left: 50%;
   top: 50%;
   transform: translate(-50%, -50%);
+  font-weight: 500;
+  padding: 0.6rem;
+  border-radius: 0.3rem;
+}
+
+.btn {
+  background-color: #888;
+  display: grid;
+  place-items: center;
+  text-transform: uppercase;
+  font-size: 2rem;
+}
+
+.btn:hover {
+  color: #000;
+  border: 0.1rem solid #bbb;
+  cursor: pointer;
+}
+
+.btn-number {
+  background-color: #666;
 }
 
 #display {
   grid-area: 1 / 1 / 2 / 5;
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  text-transform: uppercase;
+  font-size: 2.2rem;
 }
 #reset {
   grid-area: 2 / 1 / 3 / 3;
+  background-color: #990000;
 }
 #divide {
   grid-area: 2 / 3 / 3 / 4;
@@ -34,6 +61,7 @@
 }
 #equals {
   grid-area: 5 / 4 / 7 / 5;
+  background-color: #2e2e9e;
 }
 #seven {
   grid-area: 3 / 1 / 4 / 2;
