--- a/src/App.css
+++ b/src/App.css
@@ -43,7 +43,7 @@
   text-transform: uppercase;
   font-size: 2.2rem;
 }
-#reset {
+#clear {
   grid-area: 2 / 1 / 3 / 3;
   background-color: #990000;
 }
@@ -66,7 +66,7 @@
 #seven {
   grid-area: 3 / 1 / 4 / 2;
 }
-#eigth {
+#eight {
   grid-area: 3 / 2 / 4 / 3;
 }
 #nine {
